add pim & bim GET data
